Fix layer not being accounted for in cache. Add item model caching