@@ -2,16 +2,18 @@ package team.chisel.client.render;
 
 import gnu.trove.set.TLongSet;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 
 import javax.annotation.Nullable;
 import javax.vecmath.Matrix4f;
 import javax.vecmath.Vector3f;
 
+import lombok.AllArgsConstructor;
 import lombok.SneakyThrows;
+import lombok.Value;
 import net.minecraft.block.Block;
 import net.minecraft.block.state.IBlockState;
 import net.minecraft.client.renderer.block.model.BakedQuad;
@@ -23,6 +25,7 @@ import net.minecraft.client.renderer.texture.TextureAtlasSprite;
 import net.minecraft.entity.EntityLivingBase;
 import net.minecraft.item.ItemBlock;
 import net.minecraft.item.ItemStack;
+import net.minecraft.util.BlockRenderLayer;
 import net.minecraft.util.EnumFacing;
 import net.minecraft.world.World;
 import net.minecraftforge.client.MinecraftForgeClient;
@@ -41,9 +44,15 @@ import team.chisel.common.block.BlockCarvable;
 import com.google.common.cache.Cache;
 import com.google.common.cache.CacheBuilder;
 import com.google.common.collect.FluentIterable;
+import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
+import com.google.common.collect.ListMultimap;
 import com.google.common.collect.Lists;
+import com.google.common.collect.Maps;
+import com.google.common.collect.MultimapBuilder;
 import com.google.common.collect.Ordering;
+import com.google.common.collect.Table;
+import com.google.common.collect.Tables;
 
 /**
  * Model for all chisel blocks
@@ -57,28 +66,30 @@ public class ModelChiselBlock implements IPerspectiveAwareModel {
 		}
 
 	    @Override
+	    @SneakyThrows
 	    public IBakedModel handleItemState(IBakedModel originalModel, ItemStack stack, World world, EntityLivingBase entity) {
 	        Block block = ((ItemBlock) stack.getItem()).getBlock();
-	        return createModel(block.getDefaultState(), model, null);
+	        return modelcache.get(State.of(((BlockCarvable)block).getStateFromMeta(stack.getMetadata()), null), () -> createModel(block.getDefaultState(), model, null));
 	    }
 	}
+	
+	@Value
+	@AllArgsConstructor(staticName = "of")
+	private static class State {
+	    IBlockState cleanState;
+	    TLongSet serializedContext;
+	}
 
-    private List<BakedQuad> face;
-    private List<BakedQuad> general;
+    private ListMultimap<BlockRenderLayer, BakedQuad> genQuads = MultimapBuilder.enumKeys(BlockRenderLayer.class).arrayListValues().build();
+    private Table<BlockRenderLayer, EnumFacing, List<BakedQuad>> faceQuads = Tables.newCustomTable(Maps.newEnumMap(BlockRenderLayer.class), () -> Maps.newEnumMap(EnumFacing.class));
 
     private ModelChisel model;
     private Overrides overrides = new Overrides();
         
-    private static Cache<Pair<IBlockState, TLongSet>, ModelChiselBlock> modelcache = CacheBuilder.newBuilder().expireAfterAccess(1, TimeUnit.MINUTES).maximumSize(500).<Pair<IBlockState, TLongSet>, ModelChiselBlock>build();
+    private static Cache<State, ModelChiselBlock> modelcache = CacheBuilder.newBuilder().expireAfterAccess(1, TimeUnit.MINUTES).maximumSize(500).<State, ModelChiselBlock>build();
     
-    public ModelChiselBlock(List<BakedQuad> face, List<BakedQuad> general, ModelChisel model) {
-        this.face = face;
-        this.general = general;
-        this.model = model;
-    }
-
     public ModelChiselBlock(ModelChisel model) {
-        this(Collections.emptyList(), Collections.emptyList(), model);
+        this.model = model;
     }
 
     @Override
@@ -90,15 +101,16 @@ public class ModelChiselBlock implements IPerspectiveAwareModel {
             IBlockState clean = ext.getClean();
             RenderContextList ctxList = ext.getValue(BlockCarvable.CTX_LIST);
             if (ctxList == null) {
-                baked = modelcache.get(Pair.of(clean, null), () -> createModel(state, model, null));
+                baked = modelcache.get(State.of(clean, null), () -> createModel(state, model, null));
             } else {
                 TLongSet serialized = ctxList.serialized();
-                baked = modelcache.get(Pair.of(clean, serialized), () -> createModel(ext, model, ctxList));
+                baked = modelcache.get(State.of(clean, serialized), () -> createModel(ext, model, ctxList));
             }
         } else {
             baked = this;
         }
-        return side == null ? baked.general : FluentIterable.from(baked.face).filter(quad -> quad.getFace() == side).toList();
+        BlockRenderLayer layer = MinecraftForgeClient.getRenderLayer();
+        return side == null ? baked.genQuads.get(layer) : layer == null ? baked.faceQuads.column(side).values().stream().flatMap(List::stream).collect(Collectors.toList()) : baked.faceQuads.get(layer, side);
     }
 
     @Override
@@ -131,26 +143,34 @@ public class ModelChiselBlock implements IPerspectiveAwareModel {
         return ItemCameraTransforms.DEFAULT;
     }
 
+    private static final BlockRenderLayer[] LAYERS = BlockRenderLayer.values();
+    
     private ModelChiselBlock createModel(IBlockState state, ModelChisel model, RenderContextList ctx) {
-        List<BakedQuad> faceQuads = Lists.newArrayList();
-        List<BakedQuad> generalQuads = Lists.newArrayList();
-        for (EnumFacing facing : EnumFacing.VALUES) {
-            IChiselFace face = model.getFace(facing);
-            if (ctx != null && MinecraftForgeClient.getRenderLayer() != face.getLayer()) {
-            //Chisel.debug("Skipping Layer " + MinecraftForgeClient.getRenderLayer() + " for block " + block);
-                continue;
+        ModelChiselBlock ret = new ModelChiselBlock(model);
+        IBakedModel baked = model.getModel(state);
+        List<BakedQuad> quads = Lists.newArrayList();
+        for (BlockRenderLayer layer : LAYERS) {
+            for (EnumFacing facing : EnumFacing.VALUES) {
+                IChiselFace face = model.getFace(facing);
+                if (ctx == null || layer == face.getLayer()) {
+                    int quadGoal = ctx == null ? 1 : Ordering.natural().max(FluentIterable.from(face.getTextureList()).transform(tex -> tex.getType().getQuadsPerSide()));
+                    List<BakedQuad> temp = baked.getQuads(state, facing, 0);
+                    addAllQuads(temp, face, ctx, quadGoal, quads);
+                    ret.faceQuads.put(layer, facing, ImmutableList.copyOf(quads));
+                    
+                    temp = FluentIterable.from(baked.getQuads(state, null, 0)).filter(q -> q.getFace() == facing).toList();
+                    addAllQuads(temp, face, ctx, quadGoal, quads);
+                    ret.genQuads.putAll(layer, temp);
+                } else {
+                    ret.faceQuads.put(layer, facing, Lists.newArrayList());
+                }
             }
-            int quadGoal = ctx == null ? 1 : Ordering.natural().max(FluentIterable.from(face.getTextureList()).transform(tex -> tex.getType().getQuadsPerSide()));
-            IBakedModel baked = model.getModel(state);
-            List<BakedQuad> origFaceQuads = baked.getQuads(state, facing, 0);
-            List<BakedQuad> origGeneralQuads = FluentIterable.from(baked.getQuads(state, null, 0)).filter(q -> q.getFace() == facing).toList();
-            addAllQuads(origFaceQuads, face, ctx, quadGoal, faceQuads);
-            addAllQuads(origGeneralQuads, face, ctx, quadGoal, generalQuads);
         }
-        return new ModelChiselBlock(faceQuads, generalQuads, model);
+        return ret;
     }
 
     private void addAllQuads(List<BakedQuad> from, IChiselFace face, @Nullable RenderContextList ctx, int quadGoal, List<BakedQuad> to) {
+        to.clear();
         for (BakedQuad q : from) {
             for (IChiselTexture<?> tex : face.getTextureList()) {
                 to.addAll(tex.transformQuad(q, ctx == null ? null : ctx.getRenderContext(tex.getType()), quadGoal));
